--- a/Server/Tests/Restaurant.Server.Api.Tests/Restaurant.Server.Api.Tests.csproj
+++ b/Server/Tests/Restaurant.Server.Api.Tests/Restaurant.Server.Api.Tests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
