--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -66,6 +66,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid51" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid51" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid51" />
+  <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid51" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid51" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid51" />
