--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -36,5 +36,6 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="System.Threading" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="portable45-net45+win8" />
 </packages>
