--- a/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -64,5 +64,6 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="xamarinios10" />
 </packages>
