--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -137,6 +137,9 @@
     <Compile Include="Views\ProfileStripView.xaml.cs">
       <DependentUpon>ProfileStripView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\VerticalStepperView.xaml.cs">
+      <DependentUpon>VerticalStepperView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -306,6 +309,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\StepperView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\VerticalStepperView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
