removed unused references
Former-commit-id: 176b525e1245621bd993858afe05948ddd32fa83

--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -69,7 +69,7 @@
       <DependentUpon>HeaderDivider.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ParallaxScrollView.cs" />
-    <Compile Include="ViewModels\IBasketViewModel.cs" />
+    <Compile Include="Abstractions\ViewModels\IBasketViewModel.cs" />
     <Compile Include="Views\StepperView.xaml.cs">
       <DependentUpon>StepperView.xaml</DependentUpon>
     </Compile>
