--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Controls\ParallaxScrollView.cs" />
     <Compile Include="Abstractions\ViewModels\IBasketViewModel.cs" />
+    <Compile Include="Controls\TwitterLikeButton.cs" />
     <Compile Include="Views\StepperView.xaml.cs">
       <DependentUpon>StepperView.xaml</DependentUpon>
     </Compile>
