Container path changes
Former-commit-id: d26691f881c9d92e4e15c32e32f642ae781010f6

--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Themes\MaterialTheme.cs" />
     <Compile Include="Controls\AnimateButton.cs" />
     <Compile Include="Converters\InverseBoolConverter.cs" />
-    <Compile Include="BootstrapperBase.cs" />
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Managers\ThemeManager.cs" />
     <Compile Include="Models\ClientUser.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
